src/App.css
.App {
  min-height: 100vh;
}

body, html {
  font-family: 'Roboto';
}

.bg-yellow {
  background: #FFEA00;
}

.bg-dark {
  background: #181818;
}

.text-yellow {
  color: #FFEA00;
}

.center {
  margin: 0 auto;
}

.title {
  text-align: center;
  font-weight: bold;
}

@keyframes scroll_2 {
  0%   { transform: translateY(0); opacity: 1; }
  25%  { opacity: 1; }
  75%  { transform: translateY(.75em); opacity: 0; }
  100% { transform: translateY(0); opacity: 0; }
}

.scroll-icon__dot {
  display: block;
  position: absolute;
  left: 50%;
  background: #181818;
  height: .5em;
  width: .5em;
  top: .6em;
  margin-left: -.25em;
  border-radius: 50%;
  transform-origin: top center;
  backface-visibility: hidden;
  animation: scroll_2 2s ease-out infinite;
}

.scroll-icon {
  display: block;
  position: relative;
  height: 3em;
  width: 1.5em;
  border: .25em solid #181818;
  border-radius: 1em;
}

